hw02 + sem 02 ex. 3, 4

--- a/term06/BASE/02-OOP/hw02.ipynb
+++ b/term06/BASE/02-OOP/hw02.ipynb
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "fc4ccc10",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
     "            print(f'Запрашиваемой книги {name} автора {author} нет в библиотеке')\n",
     "    else:\n",
     "        output = colored('Такой команды нет!', 'red')\n",
-    "        print(output)"
+    "        cprint(output)"
    ]
   }
  ],
