--- a/term06/BASE/02-OOP/sem02.ipynb
+++ b/term06/BASE/02-OOP/sem02.ipynb
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "id": "b52ea8f4",
    "metadata": {},
    "outputs": [],
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "id": "c84794da",
    "metadata": {},
    "outputs": [
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "4c26874a",
    "metadata": {},
    "outputs": [
@@ -566,7 +566,7 @@
     }
    ],
    "source": [
-    "#я сделала все по аналогии, но если честно так и не догнала, как проявляет себя __repr__\n",
+    "# я делала все по аналогии, но если честно так и не поняла, как проявляет себя __repr__\n",
     "#получается __repr__ используется в разработческой среде, для того чтобы показать, как устроен конкретно написанный класс? (в смысле его структура)\n",
     "print(repr(token))"
    ]
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "id": "8d4652bf",
    "metadata": {},
    "outputs": [],
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "id": "4aef1274",
    "metadata": {},
    "outputs": [],
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "id": "dfc51f5f",
    "metadata": {},
    "outputs": [
@@ -634,7 +634,7 @@
      "output_type": "stream",
      "text": [
       "Посадили 3 человек.\n",
-      "Теперь текущее количество бензина: 50л\n",
+      "Теперь текущее количество бензина: 55л\n",
       "Машина помыта! Уровень чистоты теперь: 100%\n"
      ]
     }
