--- a/term06/BASE/03-Modules/hw03.ipynb
+++ b/term06/BASE/03-Modules/hw03.ipynb
@@ -43,15 +43,196 @@
    "execution_count": null,
    "id": "8d667212-c262-4591-9fb5-3743dfaaae7c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Выберите, что вы хотите сделать\n",
+      "\t0 - выйти\n",
+      "\t1 - прочитать файл\n",
+      "\t2 - вывести статистику по частям речи\n",
+      "\t3 - искать вхождения по лемме\n",
+      "\t4 - вывести предложения\n",
+      "\t5 - вывести предложение с токенами по номеру\n",
+      "Выберите, что вы хотите сделать\n",
+      "\t0 - выйти\n",
+      "\t1 - прочитать файл\n",
+      "\t2 - вывести статистику по частям речи\n",
+      "\t3 - искать вхождения по лемме\n",
+      "\t4 - вывести предложения\n",
+      "\t5 - вывести предложение с токенами по номеру\n",
+      "Предложение 149:\n",
+      "Quel est le titre du premier volume de la biographie d'Elvis Presley ?\n",
+      "Токены:\n",
+      "1: Quel (quel, ADJ)\n",
+      "2: est (être, AUX)\n",
+      "3: le (le, DET)\n",
+      "4: titre (titre, NOUN)\n",
+      "(5, '-', 6): du (_, _)\n",
+      "5: de (de, ADP)\n",
+      "6: le (le, DET)\n",
+      "7: premier (premier, ADJ)\n",
+      "8: volume (volume, NOUN)\n",
+      "9: de (de, ADP)\n",
+      "10: la (le, DET)\n",
+      "11: biographie (biographie, NOUN)\n",
+      "12: d' (de, ADP)\n",
+      "13: Elvis (Elvis, PROPN)\n",
+      "14: Presley (Presley, PROPN)\n",
+      "15: ? (?, PUNCT)\n",
+      "Выберите, что вы хотите сделать\n",
+      "\t0 - выйти\n",
+      "\t1 - прочитать файл\n",
+      "\t2 - вывести статистику по частям речи\n",
+      "\t3 - искать вхождения по лемме\n",
+      "\t4 - вывести предложения\n",
+      "\t5 - вывести предложение с токенами по номеру\n",
+      "Статистика частей речи\n",
+      "PRON : 6.94%\n",
+      "AUX  : 7.11%\n",
+      "SCONJ: 0.75%\n",
+      "DET  : 16.04%\n",
+      "NOUN : 16.95%\n",
+      "ADP  : 12.0%\n",
+      "PUNCT: 11.78%\n",
+      "VERB : 7.91%\n",
+      "ADV  : 3.53%\n",
+      "ADJ  : 6.32%\n",
+      "CCONJ: 0.41%\n",
+      "PROPN: 8.73%\n",
+      "NUM  : 0.48%\n",
+      "X    : 1.02%\n",
+      "SYM  : 0.0%\n",
+      "INTJ : 0.01%\n",
+      "Выберите, что вы хотите сделать\n",
+      "\t0 - выйти\n",
+      "\t1 - прочитать файл\n",
+      "\t2 - вывести статистику по частям речи\n",
+      "\t3 - искать вхождения по лемме\n",
+      "\t4 - вывести предложения\n",
+      "\t5 - вывести предложение с токенами по номеру\n",
+      "Количество вхождений: 2\n",
+      "Найдено: tombait в предложении À quel jour de la semaine tombait Noël en 1990 ?\n",
+      "Найдено: tombe в предложении Quand tombe le jour de la Bastille ?\n",
+      "Выберите, что вы хотите сделать\n",
+      "\t0 - выйти\n",
+      "\t1 - прочитать файл\n",
+      "\t2 - вывести статистику по частям речи\n",
+      "\t3 - искать вхождения по лемме\n",
+      "\t4 - вывести предложения\n",
+      "\t5 - вывести предложение с токенами по номеру\n",
+      "Количество вхождений: 6\n",
+      "Найдено: ouverts в предложении Quels sont les recours ouverts aux victimes de discrimination ?\n",
+      "Найдено: ouvert в предложении Quand a ouvert le premier magasin Wal-Mart ?\n",
+      "Найдено: ouvert в предложении Où fut ouvert le premier magasin J. C. Penney ?\n",
+      "Найдено: ouvert в предложении En quelle année l'île Ellis a-t-elle ouvert ses portes aux immigrants ?\n",
+      "Найдено: ouvert в предложении Quand le stade Yankee a-t-il ouvert ses portes ?\n",
+      "Найдено: ouvert в предложении En quelle année le premier phare américain a-t-il ouvert ?\n",
+      "Выберите, что вы хотите сделать\n",
+      "\t0 - выйти\n",
+      "\t1 - прочитать файл\n",
+      "\t2 - вывести статистику по частям речи\n",
+      "\t3 - искать вхождения по лемме\n",
+      "\t4 - вывести предложения\n",
+      "\t5 - вывести предложение с токенами по номеру\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "import conllu\n",
+    "\n",
+    "class Sentence:\n",
+    "    def __init__(self, token_list):\n",
+    "        self.token_list = token_list\n",
+    "        self.text = token_list.metadata.get('text', '')\n",
+    "\n",
+    "class Reader:\n",
+    "    def __init__(self):\n",
+    "        self.sentences = []\n",
+    "\n",
+    "    def read(self, file_path):\n",
+    "        with open(file_path, 'r', encoding='utf8') as file:\n",
+    "            data = file.read()\n",
+    "            self.sentences = list(conllu.parse(data))\n",
+    "\n",
+    "    def upos_statistics(self):\n",
+    "        all_upos = {}  # словарь с подсчетом частей речи\n",
+    "        total = 0  # общее кол-во\n",
+    "        for sentence in self.sentences:\n",
+    "            for token in sentence:\n",
+    "                upos = token['upostag']\n",
+    "                if upos != '_':\n",
+    "                    all_upos[upos] = all_upos.get(upos, 0) + 1\n",
+    "                    total += 1\n",
+    "        print('Статистика частей речи')\n",
+    "        for upos, amount in all_upos.items():\n",
+    "            percentage = (amount / total) * 100\n",
+    "            print(f'{upos:<{max(len(x) for x in all_upos.keys())}}: {round(percentage, 2)}%')\n",
+    "\n",
+    "    def find_by_lemma(self, lemma):\n",
+    "        res = []\n",
+    "        for sentence in self.sentences:\n",
+    "            for token in sentence:\n",
+    "                if token['lemma'] == lemma:\n",
+    "                    data = [token['form'], sentence.metadata.get('text', '')]\n",
+    "                    res.append(data)\n",
+    "        return res\n",
+    "    \n",
+    "    def print_sentences(self):\n",
+    "        for i, sentence in enumerate(self.sentences):\n",
+    "            print(f\"{i+1}:\", end=\"\") #можно было сделать в одну строчку, но у меня мозг расплавился к этому моменту\n",
+    "            print(sentence.metadata.get('text', ''))\n",
+    "\n",
+    "    def print_sentence_by_id(self, sentence_id):\n",
+    "        if sentence_id > 0 and sentence_id <= len(self.sentences):\n",
+    "            sentence = self.sentences[sentence_id - 1]\n",
+    "            print(f\"Предложение {sentence_id}:\")\n",
+    "            print(sentence.metadata.get('text', ''))\n",
+    "            print(\"Токены:\")\n",
+    "            for token in sentence:\n",
+    "                print(f\"{token['id']}: {token['form']} ({token['lemma']}, {token['upostag']})\")\n",
+    "        else:\n",
+    "            print(\"Номер предложения вне диапазона.\")\n",
+    "\n",
+    "reader = Reader()\n",
+    "\n",
+    "while True:\n",
+    "    print('Выберите, что вы хотите сделать\\n\\t0 - выйти\\n\\t1 - прочитать файл\\n\\t2 - вывести статистику по частям речи\\n\\t3 - искать вхождения по лемме\\n\\t4 - вывести предложения\\n\\t5 - вывести предложение с токенами по номеру')\n",
+    "    user = int(input())\n",
+    "    if user == 0:  # exit\n",
+    "        break\n",
+    "    elif user == 1:  # reading\n",
+    "        user_path = '../02-OOP/fr_fqb-ud-test.conllu'\n",
+    "        # user_path = input('Введите путь в файлу')\n",
+    "        reader.read(user_path)\n",
+    "    elif user == 2:  # statistics\n",
+    "        reader.upos_statistics()\n",
+    "    elif user == 3:  # search by lemma\n",
+    "        user_lemma = input('Введите лемму')\n",
+    "        result = reader.find_by_lemma(user_lemma)\n",
+    "        print(f'Количество вхождений: {len(result)}')\n",
+    "        for token in result:\n",
+    "            print(f'Найдено: {token[0]} в предложении {token[1]}')\n",
+    "    elif user == 4:  # print sentences\n",
+    "        if reader.sentences:\n",
+    "            reader.print_sentences()\n",
+    "        else:\n",
+    "            print(\"Сначала прочитайте файл.\")\n",
+    "    elif user == 5:  # print sentence by id\n",
+    "        if reader.sentences:\n",
+    "            sentence_id = int(input(\"Введите номер предложения: \"))\n",
+    "            reader.print_sentence_by_id(sentence_id)\n",
+    "        else:\n",
+    "            print(\"Сначала прочитайте файл.\")\n",
+    "    else:\n",
+    "        print('Такой команды нет.')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -65,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
