--- a/term06/BASE/06-Images, Maps/lec06.ipynb
+++ b/term06/BASE/06-Images, Maps/lec06.ipynb
@@ -1357,7 +1357,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1371,7 +1371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
