--- a/term06/BASE/05-Matplotlib/draft.ipynb
+++ b/term06/BASE/05-Matplotlib/draft.ipynb
@@ -505,10 +505,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "def myfunc(power, n):\n",
     "    X = list(range(1, n + 1))\n",
     "    Y = [x ** power for x in X]\n",
@@ -538,13 +539,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1ce3eac89054a489aaafa62374fd217",
+       "model_id": "f74bf724838346f5bf2207eeb7a9b0bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -568,13 +569,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e3ab8f4ee5b4ab6855a3a203c33db47",
+       "model_id": "4821d8e9c8294eb8a66a81b7cf9cc9e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -598,13 +599,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17cddd8c87bf44c3b9bfa4b16ae7b255",
+       "model_id": "11e70b53857847a2aefee3c30596d3da",
        "version_major": 2,
        "version_minor": 0
       },
