--- a/term06/BASE/09-RE(Python)/sem09.ipynb
+++ b/term06/BASE/09-RE(Python)/sem09.ipynb
@@ -97,7 +97,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# \\b\\w+(-\\w+)*\\b|\\d+|[\\.|,|;|:|\\]|\\[|\\(|\\)]\n",
+    "import re\n",
+    "\n",
+    "pattern = re.compile(r'''\n",
+    "    (?P<word_latin>\\b[a-zA-Z]+(-[a-zA-Z]+)*\\b)              # латинские слова с дефисом\n",
+    "  | (?P<word_cyrillic>\\b[а-яА-ЯёЁ]+(-[а-яА-ЯёЁ]+)*\\b)       # кириллические слова с дефисом\n",
+    "  | (?P<number>\\b\\d+\\b)                                     # числа\n",
+    "  | (?P<punct>[.,;:\\[\\]\\(\\)])                               # знаки пунктуации\n",
+    "''', re.VERBOSE)\n",
+    "\n",
+    "def tokenize(text):\n",
+    "    tokens = []\n",
+    "    for match in pattern.finditer(text):\n",
+    "        kind = None\n",
+    "        token = match.group(0)\n",
+    "        if match.group('word_latin'):\n",
+    "            kind = 'latin_word'\n",
+    "        elif match.group('word_cyrillic'):\n",
+    "            kind = 'cyrillic_word'\n",
+    "        elif match.group('number'):\n",
+    "            kind = 'number'\n",
+    "        elif match.group('punct'):\n",
+    "            kind = 'punctuation'\n",
+    "        tokens.append((token, kind))\n",
+    "    return tokens\n",
+    "\n",
+    "print(tokenize(raw))\n"
    ]
   },
   {
